--- a/Model/Bert.ipynb
+++ b/Model/Bert.ipynb
@@ -26,7 +26,7 @@
         "id": "qEisHkaMPl15",
         "outputId": "92b9b8fb-14e5-4e6b-9a6c-b34eee137bd7"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "ky9vAyxAX3Q2",
         "colab": {
@@ -97,7 +97,7 @@
         "id": "RKKIRU0tPXcV",
         "outputId": "99534785-fb60-4d43-d0a7-868f072575d7"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
         "id": "0lHerGtNYbIz",
         "outputId": "bdfe7763-14e0-42ea-ddd1-856f9ece8c1e"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
         "id": "319M1wWbjziN",
         "outputId": "23e6c894-4ed2-451d-a33e-70f5faca13d5"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +505,7 @@
         "id": "PcC207v-j1y3",
         "outputId": "0911a818-a797-4487-e575-bddfc303b6ba"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +689,7 @@
       "metadata": {
         "id": "j0BbLzeBj2KV"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
       "metadata": {
         "id": "SYV5OjIMj_NZ"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -715,7 +715,7 @@
         "id": "3ShdLcWh7mUn",
         "outputId": "3235cf6d-df22-4055-98e1-1083a6fc95c6"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +768,7 @@
       "metadata": {
         "id": "q6cwjj8wPhtt"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +779,7 @@
       "metadata": {
         "id": "1XlhxssQSHA3"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -795,7 +795,7 @@
         "id": "eeBreFR3SIxF",
         "outputId": "e89ecb99-39f1-42c3-c763-3c14337c0b6c"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +979,7 @@
       "metadata": {
         "id": "-nvYtMu5lM1N"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -991,7 +991,7 @@
       "metadata": {
         "id": "bv29nWAUTBXf"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1003,7 +1003,7 @@
       "metadata": {
         "id": "fNkLPkcDae3_"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1024,7 +1024,7 @@
         "id": "WuY5Y2ShTInE",
         "outputId": "a06909f6-ed53-4fd1-eb83-deb8f6cc769b"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,7 +1060,7 @@
         "id": "5ZVH0-i6UNW-",
         "outputId": "d3058a34-8272-4fbe-d99c-34e7bb6483f4"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1117,7 +1117,7 @@
         "id": "bOgUm0uXUQTF",
         "outputId": "75af42be-1d74-4748-abb6-e163830ab7fd"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1164,7 +1164,7 @@
         "id": "X3RAi2thUa7q",
         "outputId": "efeda8ea-d6ae-4c88-fe95-b777edcad855"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1202,7 @@
       "metadata": {
         "id": "wfdTzv1xVTlT"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1230,7 +1230,7 @@
         "id": "NUG1dgRDVWv0",
         "outputId": "a6a93377-54e8-43bb-c85c-065445655044"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1256,7 @@
       "metadata": {
         "id": "O3hC8nk5VYs_"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1279,7 @@
       "metadata": {
         "id": "3NWQPiVKVbBZ"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1294,7 +1294,7 @@
       "metadata": {
         "id": "hqZW28NYVd7d"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1312,7 +1312,7 @@
       "metadata": {
         "id": "8IycOzE5VgD8"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1427,7 +1427,7 @@
         "    # Measure how long the validation run took.\n",
         "    validation_time = format_time(time.time() - t0)\n",
         "    if avg_val_accuracy > best_eval_accuracy:\n",
-        "        torch.save(model, 'bert_model')\n",
+        "        torch.save(model, '/content/drive/MyDrive/data/TM/Label/bert_model')\n",
         "        best_eval_accuracy = avg_val_accuracy\n",
         "    #print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
         "    #print(\"  Validation took: {:}\".format(validation_time))\n",
@@ -1454,7 +1454,7 @@
         "id": "9OwF9tHRVh1r",
         "outputId": "f64a09c6-ea50-47f3-a1c6-fa1a3c95d245"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1499,6 +1499,45 @@
             "\n",
             "Training complete!\n",
             "Total training took 0:18:18 (h:mm:ss)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import BartModel"
+      ],
+      "metadata": {
+        "id": "igq_Ij_w3lMD"
+      },
+      "execution_count": 144,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model2 = BertForSequenceClassification.from_pretrained(\"bert-base-uncased\")\n",
+        "model2 = torch.load('/content/bert_model')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kf5B-_Xw1EEk",
+        "outputId": "07a8cbac-10ee-417b-92f7-a3b0e5068c25"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias']\n",
+            "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+            "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
           ]
         }
       ]
